--- a/app/views/news/index.pug
+++ b/app/views/news/index.pug
@@ -1,159 +1,110 @@
 extends ../layout
 block content
-	blockquote.layui-elem-quote 文章列表
-	.layui-collapse(style="margin:15px 0")
-		.layui-colla-item
-			.layui-colla-title 筛选
-			-if (con.type || con.newsClass)
-				div.layui-colla-content.layui-show
-					fieldset.layui-elem-field.layui-field-title(style="margin-top:15px")
-						legend 筛选条件
-					form.layui-form.layui-form-pane
-						.layui-form-item
-							label.layui-form-label 文章类型
-							.layui-input-inline
-								select(name="type")
-									option(value="") 请选择文章类型
-									option(value="1", selected= con.type==1 ) 文章
-									option(value="2", selected= con.type==2 ) 自测题
-						.layui-form-item
-							label.layui-form-label 文章分类
-							.layui-input-inline
-								select(name="newsClass")
-									option(value="") 请选择文章分类
-									option(value="1", selected= (con.newsClass==1) ) 痛风
-									option(value="2", selected= (con.newsClass==2) ) 糖尿病
-									option(value="3", selected= (con.newsClass==3) ) 甲状腺
-									option(value="4", selected= (con.newsClass==4) ) 自测题
+    blockquote.layui-elem-quote 文章列表
+    .layui-collapse(style="margin:15px 0")
+        .layui-colla-item
+            .layui-colla-title 筛选
+            if ( con.newsClass || con.keywords)
+                -var isShow = 'layui-show';
+            else
+                -var isShow = '';
+            div(class="layui-colla-content "+ isShow)
+                fieldset.layui-elem-field.layui-field-title(style="margin-top:15px")
+                    legend 筛选条件
+                form.layui-form.layui-form-pane
+                    .layui-form-item
+                        label.layui-form-label 文章分类
+                        .layui-input-inline
+                            select(name="newsClass")
+                                option(value="") 请选择文章分类
+                                option(value="1", selected= (con.newsClass==1) ) 痛风
+                                option(value="2", selected= (con.newsClass==2) ) 糖尿病
+                                option(value="3", selected= (con.newsClass==3) ) 甲状腺
+                    .layui-form-item
+                        label.layui-form-label 关键词
+                        .layui-input-block
+                            input.layui-input(type="text",placeholder="请输入搜索关键词",name="keywords",value=con.keywords)
+                    button.layui-btn.layui-btn-normal 点击搜索
+                    a.layui-btn.layui-btn-primary(type="reset" href="/news") 重置
+    a.layui-btn(href="/news/add") 添加
+    table.layui-table
+        colgroup:col:col:col:col:col:col:col
+        thead
+            tr
+                th ID
+                th 标题
+                th 作者
+                th 分类
+                th 创建时间
+                th(width="200px") 操作
+        tbody
+            each news in newsList
+                tr
+                    //-console.log(news.dataValues);
+                    -var data = news.dataValues;
+                    // -console.log(news.User);
+                    //-console.log(moment(data.createdAt).format('YYYY'))
+                    td #{data.newsId}
+                    td #{data.title}
+                    td #{news.User.dataValues.userName}
+                    td !{data.newsClass ===1?'<span class="layui-btn layui-btn-small layui-bg-red">痛风</span>':(data.newsClass ===2?'<span class="layui-btn layui-btn-small layui-bg-black">糖尿病</span>':(data.newsClass ===3?'<span class="layui-btn layui-btn-small layui-bg-blue">甲状腺</span>':'<span class="layui-btn layui-btn-small layui-bg-primary">自测题</span>'))}
 
-						.layui-form-item
-							label.layui-form-label 关键词
-							.layui-input-block
-								input.layui-input(type="text",placeholder="请输入搜索关键词",name="keywords",value=con.keywords)
-						button.layui-btn.layui-btn-normal 点击搜索
-						button.layui-btn.layui-btn-primary(type="reset") 重置
-			-else
-				div.layui-colla-content
-			
-					fieldset.layui-elem-field.layui-field-title(style="margin-top:15px")
-						legend 筛选条件
-					form.layui-form.layui-form-pane
-						.layui-form-item
-							label.layui-form-label 文章类型
-							.layui-input-inline
-								select(name="type")
-									option(value="") 请选择文章类型
-									option(value="1") 文章
-									option(value="2") 自测题
-						.layui-form-item
-							label.layui-form-label 文章分类
-							.layui-input-inline
-								select(name="newsClass")
-									option(value="") 请选择文章分类
-									option(value="1") 痛风
-									option(value="2") 糖尿病
-									option(value="3") 甲状腺
-									option(value="4") 自测题
-
-						.layui-form-item
-							label.layui-form-label 关键词
-							.layui-input-block
-								input.layui-input(type="text",placeholder="请输入搜索关键词",name="keywords")
-						button.layui-btn.layui-btn-normal 点击搜索
-						button.layui-btn.layui-btn-primary(type="reset") 重置
-
-	a.layui-btn(href="/news/add") 添加
-	table.layui-table
-		colgroup:col:col:col:col:col:col:col
-		thead
-			tr
-				th ID
-				th 标题
-				th 作者
-				th 类型
-				th 分类
-				th 创建时间
-				th(width="200px") 操作
-		tbody
-			each news in newsList
-				tr
-					//-console.log(news.dataValues);
-					-var data = news.dataValues;
-					//-console.log(moment(data.createdAt).format('YYYY'))
-					td #{data.newsId}
-					td #{data.title}
-					td #{data.writerName}
-					td !{data.type ===2?'<span class="layui-btn layui-btn-sm layui-bg-cyan">自测题</span>':'<span class="layui-btn layui-btn-sm layui-bg-orange">文章</span>'}
-					td !{data.newsClass ===1?'<span class="layui-btn layui-btn-sm layui-bg-red">痛风</span>':(data.newsClass ===2?'<span class="layui-btn layui-btn-sm layui-bg-black">糖尿病</span>':(data.newsClass ===3?'<span class="layui-btn layui-btn-sm layui-bg-blue">甲状腺</span>':'<span class="layui-btn layui-btn-sm layui-bg-primary">自测题</span>'))}
-
-					td #{moment(data.createdAt).format('YYYY-MM-DD HH:mm:ss')}
-					td
-						a.layui-btn.layui-btn-sm.layui-btn-normal(href="/news/edit/"+data.newsId)
-							i.layui-icon &#xe642;
-							|编辑
-						a.layui-btn.layui-btn-danger(href="/news/del/"+data.newsId,id="delNews")
-							i.layui-icon &#xe640;
-							|删除
-
-
-	//
-		script(type="text/html" id="barDemo")
-			a.layui-btn.layui-btn-primary.layui-btn-xs(lay-event="detail") 查看
-			a.layui-btn.layui-btn-xs(lay-event="edit") 编辑
-			a.layui-btn.layui-btn-danger.layui-btn-xs(lay-event="del") 删除
-
-	
-	#pageDemo  
+                    td #{moment(data.createdAt).format('YYYY-MM-DD HH:mm:ss')}
+                    td
+                        a.layui-btn.layui-btn-small.layui-btn-normal(href="/news/edit/"+data.newsId)
+                            i.layui-icon &#xe642;
+                            |编辑
+                        a.layui-btn.layui-btn-small.layui-btn-danger(href="/news/del/"+data.newsId,id="delNews")
+                            i.layui-icon &#xe640;
+                            |删除
+    #pageDemo
 block script
-	script.
-		layui.use(['laypage', 'layer', 'table', 'element'], 
-			function(){
-				var laypage = layui.laypage, //分页
-				layer = layui.layer, //弹层
-				//table = layui.table, //表格
-				$ = layui.jquery, 
-				element = layui.element; //元素操作
+    script.
+        layui.use(['laypage', 'layer', 'table', 'element'],
+            function(){
+                var laypage = layui.laypage, //分页
+                layer = layui.layer, //弹层
+                //table = layui.table, //表格
+                $ = layui.jquery,
+                element = layui.element; //元素操作
 
-				$(document).on('click','#delNews',function(e){
-					e.preventDefault();
-					var url = $(this).attr('href');
-					layer.msg('确定要删除吗？',{icon: 3, time:0,title:'提示信息', btn: ['确定', '取消'],yes:function(index){
-							//var $ = layui.jquery;
-		  					$.ajax({url:url,success:function(res){
-		  							var data = JSON.parse(res);
-		  							layer.alert(data.reason);
-		  							if(data.errCode == 200){
-		  								setTimeout(function(){
-		  									location.href = '/news'
-		  								},2000);
-		  							}
-		  						}
-		  					});
-							layer.close(index);
-						}
-					});
-				})
-				
-				laypage.render({
-					elem: 'pageDemo' //分页容器的id
-					,count: #{totalPage} //总页数
-					,curr: #{currentPage} //当前页
-					,limit: #{limit}
-					,skin: '#1E9FFF' //自定义选中色值
-					,skip: true //开启跳页
-					,jump: function(obj, first){
-						if(!first){
-							var params = '';
-							var type = "#{con.type}",
-							newsClass = "#{con.newsClass}",
-							keywords = "#{con.keywords}";
-							if(type) params += '&type='+ type;
-							if(newsClass) params += '&type='+ newsClass;
-							if(keywords) params += '&keywords='+ keywords;
-							//console.log(obj);
-							location.href = '?page='+obj.curr + params;
-							//layer.msg('第'+ obj.curr +'页');
-						}
-					}
-				});
-			});
+                $(document).on('click','#delNews',function(e){
+                    e.preventDefault();
+                    var url = $(this).attr('href');
+                    layer.msg('确定要删除吗？',{icon: 3, time:0,title:'提示信息', btn: ['确定', '取消'],yes:function(index){
+                            //var $ = layui.jquery;
+                            $.ajax({url:url,success:function(res){
+                                    var data = JSON.parse(res);
+                                    layer.alert(data.reason);
+                                    if(data.errCode == 200){
+                                        setTimeout(function(){
+                                            location.href = '/news'
+                                        },2000);
+                                    }
+                                }
+                            });
+                            layer.close(index);
+                        }
+                    });
+                })
+                laypage.render({
+                    elem: 'pageDemo' //分页容器的id
+                    ,count: #{totalPage} //总页数
+                    ,curr: #{currentPage} //当前页
+                    ,limit: #{limit}
+                    ,skin: '#1E9FFF' //自定义选中色值
+                    ,skip: true //开启跳页
+                    ,jump: function(obj, first){
+                        if(!first){
+                            var params = '';
+                            var newsClass = "#{con.newsClass}",
+                            keywords = "#{con.keywords}";
+                            if(newsClass) params += '&type='+ newsClass;
+                            if(keywords) params += '&keywords='+ keywords;
+                            //console.log(obj);
+                            location.href = '?page='+obj.curr + params;
+                            //layer.msg('第'+ obj.curr +'页');
+                        }
+                    }
+                });
+            });
